--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -6,11 +6,10 @@
     <mat-form-field class="full-width">
       <input formControlName="CaseNumber" matInput placeholder="מספר מקרה">
     </mat-form-field>
-    <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-secondary btn-raised mb-2 ml-2" style="float: right;">
-      ערוך
-    </button>
     <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2">
-      התחל
+      <span class="material-icons">
+        done
+        </span>
     </button>
   </form>
 
