--- a/src/app/formsanswered/formsanswered.component.html
+++ b/src/app/formsanswered/formsanswered.component.html
@@ -33,7 +33,7 @@
                                 </span>
                             </button>
                         </form>
-                        <form class="form" [formGroup]="formSearchEmployee" *ngIf="isCaseNumber == '0'">
+                        <form class="form" [formGroup]="formSearchEmployee" *ngIf="isCaseNumber2 == '0'">
                             <div class="row">
                                 <div class="col-6">
                                     <div class="form-group">
@@ -46,20 +46,20 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <mat-form-field>
-                                            <input matInput formControlName="EmployeeDepartment" autocomplete="off"
-                                                placeholder="חפש לפי מחלקה" name="fliterVal" />
+                                            <input matInput formControlName="EmployeeUserName" autocomplete="off"
+                                                placeholder="חפש לפי שם משתמש" name="fliterVal" />
                                         </mat-form-field>
                                     </div>
                                 </div>
                             </div>
-                            <button mat-raised-button type="submit" (click)="searchForm()"
+                            <button mat-raised-button type="submit" (click)="nurseSearchForm()"
                                 class="btn btn-primary btn-raised">
                                 <span class="material-icons">
                                     search
                                 </span>
                             </button>
                         </form>
-                        <p *ngIf="isCaseNumber == '3'">לא נמצאו רשומות עבור טופס זה</p>
+                        <p *ngIf="isCaseNumber == '3' && isCaseNumber2 == '3'">לא נמצאו רשומות עבור טופס זה</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,8 @@
     </div><br><br>
 
     <div dir="rtl">
-        <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <h2 class="text-center" *ngIf="isCaseNumber == '1'">טבלת נבדקים</h2>
+        <mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="isCaseNumber == '1'">
             <ng-container matColumnDef="PatientID">
                 <mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מספר מקרה
@@ -77,7 +78,7 @@
 
             <ng-container matColumnDef="PatientName">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם  
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם נבדק
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.PatientName}}
                 </mat-cell>
@@ -85,7 +86,7 @@
 
             <ng-container matColumnDef="PersonalID">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סוג  
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תעודת זהות
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.PatientPassport}}
                 </mat-cell>
@@ -105,6 +106,56 @@
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="primary" (click)="printRowForm(element)">
+                        <span class="material-icons">
+                            zoom_out_map
+                        </span>
+                    </button> </mat-cell>
+            </ng-container>
+
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+
+        <h2 class="text-center" *ngIf="isCaseNumber2 == '0'">טבלת עובדים</h2>
+        <mat-table [dataSource]="dataSource2" class="mat-elevation-z8" *ngIf="isCaseNumber2 == '0'">
+            <ng-container matColumnDef="PatientID">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם עובד
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element2" style="justify-content: center;"> {{element2.FirstName}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="PatientName">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם משתמש
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element2" style="justify-content: center;"> {{element2.UserName}}
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="PersonalID">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מחלקה
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element2" style="justify-content: center;"> {{element2.Department}}
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="PatientDate">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך מילוי
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element2" style="justify-content: center;"> {{element2.fillDate}}
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="Print">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הדפסת טופס
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element2" style="justify-content: center;"> <button mat-raised-button
+                        color="primary" (click)="printRowForm(element2)">
                         <span class="material-icons">
                             zoom_out_map
                         </span>
@@ -192,7 +243,7 @@
                 </div>
             </form>
         </div>
-        
+
         <div class="card-footer"></div>
         <div class="pos-botom-fixed">
             <img class="full-width" src="assets/images/covid_footer.png" />
