--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -85,7 +85,7 @@
         <!-- Update Column -->
         <ng-container matColumnDef="showAll">
             <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת טופס
+                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת נבדקים
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                     color="primary" (click)="openDialogToAnsweredForms(element.FormID)"><span class="material-icons">
