--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -9,7 +9,7 @@
     <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2">
       <span class="material-icons">
         done
-        </span>
+      </span>
     </button>
   </form>
 
@@ -22,23 +22,33 @@
     <div class="survey-options w-100100 float-right">
       <div class="poll-options">
         <div class="row">
-          <h3 class="list-title m-5 text-center">תחילת מילוי שאלות</h3>
-          <hr>
+          <div class="d-block">
+            <div class="full-width mt-3 mb-3" style="white-space: pre-wrap;text-align-last: right;text-align: right;">
+              {{_formOpenText}}
+            </div>
+          </div>
         </div>
         <ol formArrayName="Answers" class="list-style">
           <div class="row">
-            <li class="col-lg-6 col-sm-12 col-xs-12" *ngFor="let questionCtrl of _questionArr; let i=index">
-              <mat-card [formGroupName]="i" class="mb-3 rel">
-                <span class="pos-me-number-li">{{ i + 1}}. </span>
+            <li
+              [ngClass]="{'col-md-12 col-xs-12 col-sm-12': questionCtrl.QuestionType == 'TextArea', ' col-md-6 col-xs-12 col-sm-6' : questionCtrl.QuestionType != 'TextArea' }"
+              *ngFor="let questionCtrl of _questionArr; let i=index">
+              <div class="d-block" *ngIf="questionCtrl.QuestionType == 'TextArea'">
+                <div class="full-width mt-3 mb-3"
+                  style="white-space: pre-wrap;text-align-last: right;text-align: right;">
+                  {{questionCtrl.QuestionValue}}
+                </div>
+              </div>
+              <mat-card [formGroupName]="i" class="d-block" *ngIf="questionCtrl.QuestionType != 'TextArea'">
+                <span class="pos-me-number-li">{{ i + 1}} . </span>
                 <div class="row">
                   <div class="col-12 text-right">
-                    <label>{{questionCtrl.QuestionValue}}</label>
+                    <label
+                      style="white-space: pre-wrap;text-align-last: right;text-align: right;">{{questionCtrl.QuestionValue}}</label>
                   </div>
-
                   <div class="col-12 text-right">
                     <div class="d-block" *ngIf="questionCtrl.QuestionType == 'RadioButton'">
                       <mat-radio-group class="example-radio-group" formControlName="answerContent">
-
                         <div class="d-block" *ngFor="let optionCtrl of _optionArr let j = index">
                           <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
                             <mat-radio-button style="float: right;" value="{{optionCtrl.OptionValue}}">
@@ -63,11 +73,7 @@
                         <input matInput formControlName="answerContent" type="text">
                       </mat-form-field>
                     </div>
-                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'TextArea'">
-                      <mat-form-field class="full-width">
-                        <input matInput formControlName="answerContent" type="text" max="300">
-                      </mat-form-field>
-                    </div>
+
                     <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Date'">
                       <mat-form-field appearance="fill">
                         <mat-label>אפשרות תאריך</mat-label>
@@ -95,6 +101,9 @@
                       </mat-form-field>
                     </div>
                     <div class="d-block" *ngIf="questionCtrl.QuestionType == 'ID'">
+
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Signature'">
                       <mat-form-field class="full-width">
                         <input formControlName="answerContent" matInput>
                       </mat-form-field>
@@ -108,10 +117,12 @@
       </div>
     </div>
     <div class="full-width mb-2">
-      <div class="row">חתימה</div>
-      <canvas class="row" #canvas></canvas>
+      <div class="row" style="text-align: right;">חתימה</div>
+      <canvas class="row" #canvas id="canvas"></canvas>
+      <button mat-raised-button color="secondary" style="float: right;" type="button" (click)="resetSign()"><span>תיקון
+          חתימה</span></button>
     </div>
-   
+
     <div class="button-row">
       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
         type="submit" mat-raised-button>
