--- a/src/app/form-dashboard/form-dashboard.component.html
+++ b/src/app/form-dashboard/form-dashboard.component.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-2">
-            <form class="form" [formGroup]="chooseForm">
+        <div class="row mt-3 mb-2">
+            <form class="form" style="text-align: right;" [formGroup]="chooseForm">
                 <mat-radio-group aria-label="Select an option" formControlName="SwitchForms">
                     <mat-radio-button value="0">טפסים כלליים</mat-radio-button>
                     <mat-radio-button value="1">טפסים מחלקתיים</mat-radio-button>
@@ -42,13 +42,13 @@
 
 
     <div class="survey-options" *ngIf="chooseForm.controls['SwitchForms'].value == '1' || chooseForm.controls['SwitchForms'].value == '2'">
-        <div style="font-size: 20px; background-color: rgb(235, 231, 231);display: flex;padding-right: 3px;">
+        <div style="font-size: 20px; background-color: rgb(235, 231, 231);padding-right: 3px;text-align: right;">
             <div>טפסים מחלקתיים</div>
         </div>
         <div class="poll-options">
             <div class="row">
-                <div class="col-3" *ngFor="let item of all_forms_filter_not_general" (click)="openDialogToFill(item.FormID)">
-                    <mat-card class="card m-2 p-2 text-center">
+                <div class="col" *ngFor="let item of all_forms_filter_not_general" (click)="openDialogToFill(item.FormID)">
+                    <mat-card style="height: 100%;" class="card m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 15px;">{{item.FormName}}</div>
                         <img src="assets/images/mersham-logo.png">
                         <div class="list-style text-center" style="font-size: 15px;">{{item.FormDepartment}}</div>
@@ -58,13 +58,13 @@
         </div>
     </div>
     <div class="survey-options" *ngIf="chooseForm.controls['SwitchForms'].value == '0' || chooseForm.controls['SwitchForms'].value == '2'">
-        <div style="font-size: 20px; background-color: rgb(235, 231, 231);display: flex;padding-right: 3px;">
+        <div style="font-size: 20px; background-color: rgb(235, 231, 231);padding-right: 3px;text-align: right;">
             <div>טפסים כלליים</div>
         </div>
         <div class="poll-options">
             <div class="row">
-                <div class="col-3" *ngFor="let item of all_forms_filter_general" (click)="openDialogToFill(item.FormID)">
-                    <mat-card class="card m-2 p-2 text-center">
+                <div class="col" *ngFor="let item of all_forms_filter_general" (click)="openDialogToFill(item.FormID)">
+                    <mat-card style="height: 100%;" class="card m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 15px;">{{item.FormName}}</div>
                         <img src="assets/images/mersham-logo.png">
                         <div class="list-style text-center" style="font-size: 15px;">{{item.FormDepartment}}</div>
