--- a/src/app/updatesingleform/updatesingleform.component.css
+++ b/src/app/updatesingleform/updatesingleform.component.css
@@ -1,8 +1,8 @@
 .border-me{
     box-shadow: 0px 0px 4px 0px #000;
     border-radius: 5px;
-    margin-bottom: 20px;
-    padding: 15px;
+    margin-bottom: 10px;
+    padding: 5px;
 }
 
 ol{
@@ -17,4 +17,45 @@ ul{
 }
 .mat-form-field {
     margin-right: 8px;
+  }
+
+  .example-container {
+    height: 400px;
+    overflow: auto;
+  }
+  
+  .mat-table-sticky {
+    background: #59abfd;
+    opacity: 1;
+  }
+  
+  .example-sticky-toggle-group {
+    margin: 8px;
+  }
+  
+  .mat-column-filler {
+    padding: 0 8px;
+    font-size: 10px;
+    text-align: center;
+  }
+  
+  .mat-header-cell, .mat-footer-cell, .mat-cell {
+    min-width: 80px;
+    box-sizing: border-box;
+  }
+  
+  .mat-table-sticky-border-elem-top {
+    border-bottom: 2px solid midnightblue;
+  }
+  
+  .mat-table-sticky-border-elem-right {
+    border-left: 2px solid midnightblue;
+  }
+  
+  .mat-table-sticky-border-elem-bottom {
+    border-top: 2px solid midnightblue;
+  }
+  
+  .mat-table-sticky-border-elem-left {
+    border-right: 2px solid midnightblue;
   }
