--- a/src/app/formsanswered/formsanswered.component.html
+++ b/src/app/formsanswered/formsanswered.component.html
@@ -31,7 +31,7 @@
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput formControlName="EmployeeUserName" autocomplete="off"
-                                                placeholder="חפש לפי שם משתמש" name="fliterVal" />
+                                                placeholder="חפש לפי שם אחראי" name="fliterVal" />
                                         </mat-form-field>
 
                                     </div>
@@ -40,7 +40,7 @@
                                     <div class="form-group">
                                         <mat-form-field appearance="fill">
                                             <input matInput [max]="todaysDate" formControlName="FillDate"
-                                                [matDatepicker]="pickerDate" placeholder="בחר תאריך">
+                                                [matDatepicker]="pickerDate" placeholder="תאריך מילוי טופס">
                                             <mat-datepicker-toggle matSuffix [for]="pickerDate">
                                             </mat-datepicker-toggle>
                                             <mat-datepicker #pickerDate></mat-datepicker>
@@ -119,86 +119,5 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </div>
-</div>
-
-<div id="form-html-templet" class="d-none-desktop">
-    <div dir="rtl" class="card min-h-100 text-right">
-        <div class="card-header border-bottomIn rel">
-            <img class="full-width" src="assets/images/covid_2_header.png" />
-            <h2 class="text-center pos-abs-center">{{rowFormData.FormName}}</h2>
-
-        </div>
-        <div class="card-body pd-10">
-            <div class="row-1">
-                <div class="colr-12">
-                    <h4>פרטים אישיים</h4>
-                </div>
-            </div>
-            <br />
-            <div class="row-1 text-up box text-right pad-30 justify-content-md-center">
-                <div class="colr-4">
-                    <label><b>מספר מקרה</b></label>
-                    <span class="b-bottom">{{ rowFormData.PatientID }}</span>
-                </div>
-                <div class="colr-4">
-                    <label><b>תעודת זהות</b></label>
-                    <span class="b-bottom">{{ rowFormData.PatientPassport }}</span>
-                </div>
-                <div class="colr-4">
-                    <label><b>שם נבדק</b></label>
-                    <span class="b-bottom">{{
-                        rowFormData.PatientName
-                        }}</span>
-                </div>
-
-                <div class="colr-4">
-                    <label><b>טלפון נייד</b></label>
-                    <span class="b-bottom">{{
-                        rowFormData.PatientPhone
-                        }}</span>
-                </div>
-
-                <div class="colr-4">
-                    <label><b>מין</b></label><span class="b-bottom">{{
-                        rowFormData.PatientGender
-                        }}</span>
-                </div>
-                <div class="colr-4">
-                    <label><b>תאריך לידה</b></label><span class="b-bottom">{{
-                        rowFormData.PatientBirthday
-                        }}</span>
-                </div>
-                <div class="colr-6">
-                    <label><b>מייל</b></label><span class="b-bottom">{{ rowFormData.PatientEmail }}</span>
-                </div>
-                <div class="colr-6">
-                    <label><b>כתובת</b></label><span class="b-bottom">{{
-                        rowFormData.PatientAddress
-                        }}</span>
-                </div>
-            </div>
-            <form class="worker-form-in" [formGroup]="formPrint">
-                <h3>חלק שאלות :</h3>
-                <div class="row-1" *ngFor="let item of rowFormData.Questions">
-                    <div class="colr-12 brs-1">
-                        <p class="fix-mb-5">
-                            <span>
-                                <span><b>{{item.questionValue}}</b>:&nbsp;&nbsp;</span>{{item.AnswerValue}}
-                            </span>
-                        </p>
-                    </div>
-                </div>
-                <div class="pos-botom-fixed" style="margin-bottom: 150px;margin-right: 600px;">
-                    <div class="row">חתימה</div>
-                    <img [src]="rowFormData.Signature">
-                </div>
-            </form>
-        </div>
-
-        <div class="card-footer"></div>
-        <div class="pos-botom-fixed">
-            <img class="full-width" src="assets/images/covid_footer.png" />
-        </div>
     </div>
 </div>
