--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -1,103 +1,237 @@
 <h2 class="page-title text-center">רשימת שאלונים</h2>
 
-
-<div class="container-fluid">
-    <div class="row">
-        <div dir="rtl" class="card w-85-p">
-            <div class="card-body">
-                <form class="form" [formGroup]="formSearch">
-                    <div class="row">
-                        <div class="form-group mt-3 col-lg-8 col-sm-12 col-xs-12">
-                            <mat-form-field>
-                                <input matInput formControlName="searchWord" autocomplete="off"
-                                    placeholder="חפש לפי שם שאלון" name="fliterVal" />
-                            </mat-form-field>
+<div id="page-toshow">
+    <div class="container-fluid">
+        <div class="row">
+            <div dir="rtl" class="card w-85-p">
+                <div class="card-body">
+                    <form class="form" [formGroup]="formSearch">
+                        <div class="row">
+                            <div class="form-group mt-3 col-lg-8 col-sm-12 col-xs-12">
+                                <mat-form-field>
+                                    <input matInput formControlName="searchWord" autocomplete="off"
+                                        placeholder="חפש לפי שם שאלון" name="fliterVal" />
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group mt-2 col-lg-4 col-sm-12">
+                                <mat-form-field appearance="fill">
+                                    <mat-label>מחלקה</mat-label>
+                                    <mat-select formControlName="departmentControl">
+                                        <mat-option [value]="">
+                                            הכל
+                                        </mat-option>
+                                        <mat-option *ngFor="let dept of department" [value]="dept">
+                                            {{dept}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
                         </div>
-                        <div class="form-group mt-2 col-lg-4 col-sm-12">
-                            <mat-form-field appearance="fill">
-                                <mat-label>מחלקה</mat-label>
-                                <mat-select formControlName="departmentControl">
-                                    <mat-option [value]="">
-                                        הכל
-                                    </mat-option>
-                                    <mat-option *ngFor="let dept of department" [value]="dept">
-                                        {{dept}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <button mat-raised-button type="submit" (click)="searchForm()" class="btn btn-primary btn-raised">
-                        <span class="material-icons">
-                            search
-                        </span>
-                    </button>
-                </form>
+                        <button mat-raised-button type="submit" (click)="searchForm()"
+                            class="btn btn-primary btn-raised">
+                            <span class="material-icons">
+                                search
+                            </span>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
+    </div><br><br>
+
+    <div dir="rtl">
+        <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!-- Position Column -->
+            <ng-container matColumnDef="FormID">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מס' טופס
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormID}} </mat-cell>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="FormName">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם טופס
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;text-align: center;">
+                    {{element.FormName}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="formDepartment">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מחלקה
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormDepartment}}
+                </mat-cell>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="FormDate">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך יצירת
+                    הטופס </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormDate}} </mat-cell>
+            </ng-container>
+
+            <!-- Update Column -->
+            <ng-container matColumnDef="update">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> עדכון טופס
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                        color="accent" (click)="openDialogToUpdate(element.FormID)"><span class="material-icons">
+                            edit
+                        </span></button> </mat-cell>
+            </ng-container>
+
+            <!-- Update Column -->
+            <ng-container matColumnDef="showAll">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת טופס
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                        color="primary" (click)="openDialogToAnsweredForms(element.FormID)"><span
+                            class="material-icons">
+                            zoom_out_map
+                        </span></button> </mat-cell>
+            </ng-container>
+
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+        <button (click)="openDialogToUpdate(0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
+                class="material-icons">add</i></button>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
     </div>
-</div><br><br>
-
-<div dir="rtl">
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- Position Column -->
-        <ng-container matColumnDef="FormID">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מס' טופס
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormID}} </mat-cell>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="FormName">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם טופס
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;text-align: center;"> {{element.FormName}} </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="formDepartment">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מחלקה
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormDepartment}} </mat-cell>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="FormDate">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך יצירת
-                הטופס </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FormDate}} </mat-cell>
-        </ng-container>
-
-        <!-- Update Column -->
-        <ng-container matColumnDef="update">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> עדכון טופס
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                    color="accent" (click)="openDialogToUpdate(element.FormID)"><span class="material-icons">
-                        edit
-                    </span></button> </mat-cell>
-        </ng-container>
-
-        <!-- Update Column -->
-        <ng-container matColumnDef="showAll">
-            <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת טופס
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                    color="primary" (click)="openDialogToAnsweredForms(element.FormID)"><span class="material-icons">
-                        zoom_out_map
-                    </span></button> </mat-cell>
-        </ng-container>
+</div>
 
 
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
-    <button (click)="openDialogToUpdate(0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
-            class="material-icons">add</i></button>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
+<div id="form-html-templet" class="d-none-desktop">
+    <div dir="rtl" class="card min-h-100 text-right">
+        <div class="card-header border-bottomIn rel">
+            <img class="full-width" src="assets/images/covid_2_header.png" />
+            <h2 class="text-center pos-abs-center">{{rowFormData.FormName}}</h2>
+        </div>
+        <div class="card-body pd-10">
+            <div class="row-1">
+                <div class="colr-12">
+                    <h4>פרטים אישיים</h4>
+                </div>
+            </div>
+            <br />
+            <div class="row-1 text-up box text-right pad-30 justify-content-md-center"
+                *ngIf="rowFormData.PatientID != ''">
+                <div class="colr-4">
+                    <label><b>מספר מקרה</b></label>
+                    <span class="b-bottom">{{ rowFormData.PatientID }}</span>
+                </div>
+                <div class="colr-4">
+                    <label><b>תעודת זהות</b></label>
+                    <span class="b-bottom">{{ rowFormData.PatientPassport }}</span>
+                </div>
+                <div class="colr-4">
+                    <label><b>שם נבדק</b></label>
+                    <span class="b-bottom">{{
+                        rowFormData.PatientName
+                        }}</span>
+                </div>
+
+                <div class="colr-4">
+                    <label><b>טלפון נייד</b></label>
+                    <span class="b-bottom">{{
+                        rowFormData.PatientPhone
+                        }}</span>
+                </div>
+
+                <div class="colr-4">
+                    <label><b>מין</b></label><span class="b-bottom">{{
+                        rowFormData.PatientGender
+                        }}</span>
+                </div>
+                <div class="colr-4">
+                    <label><b>תאריך לידה</b></label><span class="b-bottom">{{
+                        rowFormData.PatientBirthday
+                        }}</span>
+                </div>
+                <div class="colr-6">
+                    <label><b>מייל</b></label><span class="b-bottom">{{ rowFormData.PatientEmail }}</span>
+                </div>
+                <div class="colr-6">
+                    <label><b>כתובת</b></label><span class="b-bottom">{{
+                        rowFormData.PatientAddress
+                        }}</span>
+                </div>
+            </div>
+            <form class="worker-form-in" [formGroup]="formPrint">
+                <h3>חלק שאלות :</h3>
+                <div class="row-1" *ngFor="let item of rowFormData.Questions">
+                    <div class="colr-12 brs-1">
+                        <p class="fix-mb-5">
+                            <span>
+                                <span><b>{{item.questionValue}}</b>:&nbsp;&nbsp;</span>{{item.AnswerValue}}
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div formArrayName="Tables">
+                    <div class="d-block">
+                        <h3 style="text-align: right;"><strong>חלק טבלאות</strong></h3>
+                    </div>
+                    <div *ngFor="let table of _tableArr; let tableIndex = index" [formGroupName]="tableIndex"
+                        style="margin-top: 20px;">
+                        <mat-divider></mat-divider>
+                        <div class="row" style="display: block;">
+                            <h4 style="text-align: center;">{{table.TableText}}</h4>
+                        </div>
+                        <div formArrayName="ColumnRows" class="row" id="table-overflow">
+                            <div class="col">
+                                <table class="table responsive-table">
+                                    <tr>
+                                        <th *ngFor="let column of table.colsGroup" style="text-align: center;">
+                                            {{column.colsText}}
+                                        </th>
+                                    </tr>
+                                    <tr *ngFor="let row of table.rowsGroup; let output = index"
+                                        [formGroupName]="output">
+                                        <td *ngFor="let column of table.colsGroup; let output2 = index"
+                                            formArrayName="Columns">
+                                            <span *ngIf="row.rowsText != '' && output2 == 0;else input_other"
+                                                style="text-align: right;float: right;">{{row.rowsText}}</span>
+                                            <ng-template #input_other>
+                                                <mat-form-field class="fix-my-width" [formGroupName]="output2"
+                                                    *ngIf="column.ColType == 'Text'">
+                                                    <input matInput style="text-align: center;"
+                                                        formControlName="tableAnswerContent" class="table-form-input">
+                                                </mat-form-field>
+                                                <section class="example-section" [formGroupName]="output2"
+                                                    *ngIf="column.ColType == 'CheckBox'">
+                                                    <mat-radio-group>
+                                                        <mat-checkbox class="list-title m-3 text-center"
+                                                            formControlName="tableAnswerContent">
+                                                        </mat-checkbox>
+                                                    </mat-radio-group>
+                                                </section>
+                                            </ng-template>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pos-botom-fixed" style="margin-bottom: 150px;margin-right: 700px;">
+                    <div class="row" style="float: right;">חתימה</div>
+                    <img [src]="rowFormData.Signature">
+                </div>
+            </form>
+
+        </div>
+
+        <div class="card-footer" style="margin-top: 250px;"></div>
+        <div class="pos-botom-fixed">
+            <img class="full-width" src="assets/images/covid_footer.png" />
+        </div>
+    </div>
 </div>
