--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -133,6 +133,24 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
+            <li class="nav-item" *ngIf="_shoCaseinvoises">
+                <mat-accordion>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>חשבוניות</mat-panel-title>
+                            <mat-panel-description> </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <ul>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="caseinvoises"
+                                    >חשבוניות הוצאה לפועל</a
+                                >
+                            </li>
+                        </ul>
+                    </mat-expansion-panel>
+                </mat-accordion>
+            </li>
             <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
